- New volume settings per player. Every chant volume is configurable. - En-/Disable setting per player. For those who no longer wish for your lovely tunes.

--- a/lang/cn.json
+++ b/lang/cn.json
@@ -1,12 +1,20 @@
 {
-  "FU.ChanterCalmTone": "Calm Tone",
-  "FU.ChanterEnergeticTone": "Energetic Tone",
-  "FU.ChanterFranticTone": "Frantic Tone",
-  "FU.ChanterHauntingTune": "Haunting Tune",
-  "FU.ChanterLivelyTone": "Lively Tone",
-  "FU.ChanterMenacingTone": "Menacing Tone",
-  "FU.ChanterSolemnTone": "Solemn Tone",
-  "FU.ChanterSongTitleHeader": "歌曲标题",
-  "FU.ChanterPlaylistTitle": "播放列表标题",
-  "FU.ChanterRitualsLabel": "Rituals"
+  "FU.ChanterExpansionCalmTone": "Calm Tone",
+  "FU.ChanterExpansionEnergeticTone": "Energetic Tone",
+  "FU.ChanterExpansionFranticTone": "Frantic Tone",
+  "FU.ChanterExpansionHauntingTune": "Haunting Tune",
+  "FU.ChanterExpansionLivelyTone": "Lively Tone",
+  "FU.ChanterExpansionMenacingTone": "Menacing Tone",
+  "FU.ChanterExpansionSolemnTone": "Solemn Tone",
+  "FU.ChanterExpansionSongTitleHeader": "歌曲标题",
+  "FU.ChanterExpansionPlaylistTitle": "播放列表标题",
+  "FU.ChanterExpansionRitualsLabel": "Rituals",
+  "FU.ChanterExpansionVolumeLow": "低音量",
+  "FU.ChanterExpansionVolumeMedium": "中音量",
+  "FU.ChanterExpansionVolumeHigh": "高音量",
+  "FU.ChanterExpansionVolumeLowHint": "低音量歌曲的音量",
+  "FU.ChanterExpansionVolumeMediumHint": "中音量歌曲的音量",
+  "FU.ChanterExpansionVolumeHighHint": "高音量歌曲的音量",
+  "FU.ChanterExpansionEnable": "启用吟唱者音乐扩展",
+  "FU.ChanterExpansionEnableHint": "启用或禁用吟唱者音乐扩展功能"
 }
