--- a/lang/de.json
+++ b/lang/de.json
@@ -1,12 +1,20 @@
 {
-  "FU.ChanterCalmTone": "Calm Tone",
-  "FU.ChanterEnergeticTone": "Energetic Tone",
-  "FU.ChanterFranticTone": "Frantic Tone",
-  "FU.ChanterHauntingTune": "Haunting Tune",
-  "FU.ChanterLivelyTone": "Lively Tone",
-  "FU.ChanterMenacingTone": "Menacing Tone",
-  "FU.ChanterSolemnTone": "Solemn Tone",
-  "FU.ChanterSongTitleHeader": "Liedtitel",
-  "FU.ChanterPlaylistTitle": "Playlist Titel",
-  "FU.ChanterRitualsLabel": "Rituals"
+  "FU.ChanterExpansionCalmTone": "Calm Tone",
+  "FU.ChanterExpansionEnergeticTone": "Energetic Tone",
+  "FU.ChanterExpansionFranticTone": "Frantic Tone",
+  "FU.ChanterExpansionHauntingTune": "Haunting Tune",
+  "FU.ChanterExpansionLivelyTone": "Lively Tone",
+  "FU.ChanterExpansionMenacingTone": "Menacing Tone",
+  "FU.ChanterExpansionSolemnTone": "Solemn Tone",
+  "FU.ChanterExpansionSongTitleHeader": "Liedtitel",
+  "FU.ChanterExpansionPlaylistTitle": "Playlist Titel",
+  "FU.ChanterExpansionRitualsLabel": "Rituals",
+  "FU.ChanterExpansionVolumeLow": "Niedrige Lautstärke",
+  "FU.ChanterExpansionVolumeMedium": "Mittlere Lautstärke",
+  "FU.ChanterExpansionVolumeHigh": "Hohe Lautstärke",
+  "FU.ChanterExpansionVolumeLowHint": "Lautstärke für Lieder mit niedriger Lautstärke",
+  "FU.ChanterExpansionVolumeMediumHint": "Lautstärke für Lieder mit mittlerer Lautstärke",
+  "FU.ChanterExpansionVolumeHighHint": "Lautstärke für Lieder mit hoher Lautstärke",
+  "FU.ChanterExpansionEnable": "Chanter Musical Expansion aktivieren",
+  "FU.ChanterExpansionEnableHint": "Aktiviert oder deaktiviert die Funktionen der Chanter Musical Expansion"
 }
