--- a/lang/en.json
+++ b/lang/en.json
@@ -1,12 +1,20 @@
 {
-  "FU.ChanterCalmTone": "Calm Tone",
-  "FU.ChanterEnergeticTone": "Energetic Tone",
-  "FU.ChanterFranticTone": "Frantic Tone",
-  "FU.ChanterHauntingTune": "Haunting Tune",
-  "FU.ChanterLivelyTone": "Lively Tone",
-  "FU.ChanterMenacingTone": "Menacing Tone",
-  "FU.ChanterSolemnTone": "Solemn Tone",
-  "FU.ChanterSongTitleHeader": "Song Title",
-  "FU.ChanterPlaylistTitle": "Playlist Title",
-  "FU.ChanterRitualsLabel": "Rituals"
+  "FU.ChanterExpansionCalmTone": "Calm Tone",
+  "FU.ChanterExpansionEnergeticTone": "Energetic Tone",
+  "FU.ChanterExpansionFranticTone": "Frantic Tone",
+  "FU.ChanterExpansionHauntingTune": "Haunting Tune",
+  "FU.ChanterExpansionLivelyTone": "Lively Tone",
+  "FU.ChanterExpansionMenacingTone": "Menacing Tone",
+  "FU.ChanterExpansionSolemnTone": "Solemn Tone",
+  "FU.ChanterExpansionSongTitleHeader": "Song Title",
+  "FU.ChanterExpansionPlaylistTitle": "Playlist Title",
+  "FU.ChanterExpansionRitualsLabel": "Rituals",
+  "FU.ChanterExpansionVolumeLow": "Low Volume",
+  "FU.ChanterExpansionVolumeMedium": "Medium Volume",
+  "FU.ChanterExpansionVolumeHigh": "High Volume",
+  "FU.ChanterExpansionVolumeLowHint": "Volume for low volume songs",
+  "FU.ChanterExpansionVolumeMediumHint": "Volume for medium volume songs",
+  "FU.ChanterExpansionVolumeHighHint": "Volume for high volume songs",
+  "FU.ChanterExpansionEnable": "Enable Chanter Musical Expansion",
+  "FU.ChanterExpansionEnableHint": "Enable or disable the Chanter Musical Expansion features"
 }
