--- a/lang/es.json
+++ b/lang/es.json
@@ -1,12 +1,20 @@
 {
-  "FU.ChanterCalmTone": "Calm Tone",
-  "FU.ChanterEnergeticTone": "Energetic Tone",
-  "FU.ChanterFranticTone": "Frantic Tone",
-  "FU.ChanterHauntingTune": "Haunting Tune",
-  "FU.ChanterLivelyTone": "Lively Tone",
-  "FU.ChanterMenacingTone": "Menacing Tone",
-  "FU.ChanterSolemnTone": "Solemn Tone",
-  "FU.ChanterSongTitleHeader": "Título de la Canción",
-  "FU.ChanterPlaylistTitle": "Título de la Lista",
-  "FU.ChanterRitualsLabel": "Rituals"
+  "FU.ChanterExpansionCalmTone": "Calm Tone",
+  "FU.ChanterExpansionEnergeticTone": "Energetic Tone",
+  "FU.ChanterExpansionFranticTone": "Frantic Tone",
+  "FU.ChanterExpansionHauntingTune": "Haunting Tune",
+  "FU.ChanterExpansionLivelyTone": "Lively Tone",
+  "FU.ChanterExpansionMenacingTone": "Menacing Tone",
+  "FU.ChanterExpansionSolemnTone": "Solemn Tone",
+  "FU.ChanterExpansionSongTitleHeader": "Título de la Canción",
+  "FU.ChanterExpansionPlaylistTitle": "Título de la Lista",
+  "FU.ChanterExpansionRitualsLabel": "Rituals",
+  "FU.ChanterExpansionVolumeLow": "Volumen bajo",
+  "FU.ChanterExpansionVolumeMedium": "Volumen medio",
+  "FU.ChanterExpansionVolumeHigh": "Volumen alto",
+  "FU.ChanterExpansionVolumeLowHint": "Volumen para canciones de volumen bajo",
+  "FU.ChanterExpansionVolumeMediumHint": "Volumen para canciones de volumen medio",
+  "FU.ChanterExpansionVolumeHighHint": "Volumen para canciones de volumen alto",
+  "FU.ChanterExpansionEnable": "Habilitar expansión musical de Chanter",
+  "FU.ChanterExpansionEnableHint": "Habilita o deshabilita las funciones de la expansión musical de Chanter"
 }
