--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,12 +1,20 @@
 {
-  "FU.ChanterCalmTone": "Calm Tone",
-  "FU.ChanterEnergeticTone": "Energetic Tone",
-  "FU.ChanterFranticTone": "Frantic Tone",
-  "FU.ChanterHauntingTune": "Haunting Tune",
-  "FU.ChanterLivelyTone": "Lively Tone",
-  "FU.ChanterMenacingTone": "Menacing Tone",
-  "FU.ChanterSolemnTone": "Solemn Tone",
-  "FU.ChanterSongTitleHeader": "Titre de la Chanson",
-  "FU.ChanterPlaylistTitle": "Titre de la Playlist",
-  "FU.ChanterRitualsLabel": "Rituals"
+  "FU.ChanterExpansionCalmTone": "Calm Tone",
+  "FU.ChanterExpansionEnergeticTone": "Energetic Tone",
+  "FU.ChanterExpansionFranticTone": "Frantic Tone",
+  "FU.ChanterExpansionHauntingTune": "Haunting Tune",
+  "FU.ChanterExpansionLivelyTone": "Lively Tone",
+  "FU.ChanterExpansionMenacingTone": "Menacing Tone",
+  "FU.ChanterExpansionSolemnTone": "Solemn Tone",
+  "FU.ChanterExpansionSongTitleHeader": "Titre de la Chanson",
+  "FU.ChanterExpansionPlaylistTitle": "Titre de la Playlist",
+  "FU.ChanterExpansionRitualsLabel": "Rituals",
+  "FU.ChanterExpansionVolumeLow": "Volume faible",
+  "FU.ChanterExpansionVolumeMedium": "Volume moyen",
+  "FU.ChanterExpansionVolumeHigh": "Volume élevé",
+  "FU.ChanterExpansionVolumeLowHint": "Volume pour les chansons à volume faible",
+  "FU.ChanterExpansionVolumeMediumHint": "Volume pour les chansons à volume moyen",
+  "FU.ChanterExpansionVolumeHighHint": "Volume pour les chansons à volume élevé",
+  "FU.ChanterExpansionEnable": "Activer l'extension musicale du Chanter",
+  "FU.ChanterExpansionEnableHint": "Active ou désactive les fonctionnalités de l'extension musicale du Chanter"
 }
