--- a/lang/it.json
+++ b/lang/it.json
@@ -1,12 +1,20 @@
 {
-  "FU.ChanterCalmTone": "Calm Tone",
-  "FU.ChanterEnergeticTone": "Energetic Tone",
-  "FU.ChanterFranticTone": "Frantic Tone",
-  "FU.ChanterHauntingTune": "Haunting Tune",
-  "FU.ChanterLivelyTone": "Lively Tone",
-  "FU.ChanterMenacingTone": "Menacing Tone",
-  "FU.ChanterSolemnTone": "Solemn Tone",
-  "FU.ChanterSongTitleHeader": "Titolo della Canzone",
-  "FU.ChanterPlaylistTitle": "Titolo Playlist",
-  "FU.ChanterRitualsLabel": "Rituals"
+  "FU.ChanterExpansionCalmTone": "Calm Tone",
+  "FU.ChanterExpansionEnergeticTone": "Energetic Tone",
+  "FU.ChanterExpansionFranticTone": "Frantic Tone",
+  "FU.ChanterExpansionHauntingTune": "Haunting Tune",
+  "FU.ChanterExpansionLivelyTone": "Lively Tone",
+  "FU.ChanterExpansionMenacingTone": "Menacing Tone",
+  "FU.ChanterExpansionSolemnTone": "Solemn Tone",
+  "FU.ChanterExpansionSongTitleHeader": "Titolo della Canzone",
+  "FU.ChanterExpansionPlaylistTitle": "Titolo Playlist",
+  "FU.ChanterExpansionRitualsLabel": "Rituals",
+  "FU.ChanterExpansionVolumeLow": "Volume basso",
+  "FU.ChanterExpansionVolumeMedium": "Volume medio",
+  "FU.ChanterExpansionVolumeHigh": "Volume alto",
+  "FU.ChanterExpansionVolumeLowHint": "Volume per le canzoni a basso volume",
+  "FU.ChanterExpansionVolumeMediumHint": "Volume per le canzoni a volume medio",
+  "FU.ChanterExpansionVolumeHighHint": "Volume per le canzoni a volume alto",
+  "FU.ChanterExpansionEnable": "Abilita espansione musicale del Chanter",
+  "FU.ChanterExpansionEnableHint": "Abilita o disabilita le funzionalità dell'espansione musicale del Chanter"
 }
