--- a/lang/pl.json
+++ b/lang/pl.json
@@ -1,12 +1,20 @@
 {
-  "FU.ChanterCalmTone": "Calm Tone",
-  "FU.ChanterEnergeticTone": "Energetic Tone",
-  "FU.ChanterFranticTone": "Frantic Tone",
-  "FU.ChanterHauntingTune": "Haunting Tune",
-  "FU.ChanterLivelyTone": "Lively Tone",
-  "FU.ChanterMenacingTone": "Menacing Tone",
-  "FU.ChanterSolemnTone": "Solemn Tone",
-  "FU.ChanterSongTitleHeader": "Tytuł Piosenki",
-  "FU.ChanterPlaylistTitle": "Tytuł Playlisty",
-  "FU.ChanterRitualsLabel": "Rituals"
+  "FU.ChanterExpansionCalmTone": "Calm Tone",
+  "FU.ChanterExpansionEnergeticTone": "Energetic Tone",
+  "FU.ChanterExpansionFranticTone": "Frantic Tone",
+  "FU.ChanterExpansionHauntingTune": "Haunting Tune",
+  "FU.ChanterExpansionLivelyTone": "Lively Tone",
+  "FU.ChanterExpansionMenacingTone": "Menacing Tone",
+  "FU.ChanterExpansionSolemnTone": "Solemn Tone",
+  "FU.ChanterExpansionSongTitleHeader": "Tytuł Piosenki",
+  "FU.ChanterExpansionPlaylistTitle": "Tytuł Playlisty",
+  "FU.ChanterExpansionRitualsLabel": "Rituals",
+  "FU.ChanterExpansionVolumeLow": "Niska głośność",
+  "FU.ChanterExpansionVolumeMedium": "Średnia głośność",
+  "FU.ChanterExpansionVolumeHigh": "Wysoka głośność",
+  "FU.ChanterExpansionVolumeLowHint": "Głośność dla utworów o niskiej głośności",
+  "FU.ChanterExpansionVolumeMediumHint": "Głośność dla utworów o średniej głośności",
+  "FU.ChanterExpansionVolumeHighHint": "Głośność dla utworów o wysokiej głośności",
+  "FU.ChanterExpansionEnable": "Włącz rozszerzenie muzyczne Chanter",
+  "FU.ChanterExpansionEnableHint": "Włącza lub wyłącza funkcje rozszerzenia muzycznego Chanter"
 }
