--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -1,12 +1,20 @@
 {
-  "FU.ChanterCalmTone": "Calm Tone",
-  "FU.ChanterEnergeticTone": "Energetic Tone",
-  "FU.ChanterFranticTone": "Frantic Tone",
-  "FU.ChanterHauntingTune": "Haunting Tune",
-  "FU.ChanterLivelyTone": "Lively Tone",
-  "FU.ChanterMenacingTone": "Menacing Tone",
-  "FU.ChanterSolemnTone": "Solemn Tone",
-  "FU.ChanterSongTitleHeader": "Título da Música",
-  "FU.ChanterPlaylistTitle": "Título da Playlist",
-  "FU.ChanterRitualsLabel": "Rituals"
+  "FU.ChanterExpansionCalmTone": "Calm Tone",
+  "FU.ChanterExpansionEnergeticTone": "Energetic Tone",
+  "FU.ChanterExpansionFranticTone": "Frantic Tone",
+  "FU.ChanterExpansionHauntingTune": "Haunting Tune",
+  "FU.ChanterExpansionLivelyTone": "Lively Tone",
+  "FU.ChanterExpansionMenacingTone": "Menacing Tone",
+  "FU.ChanterExpansionSolemnTone": "Solemn Tone",
+  "FU.ChanterExpansionSongTitleHeader": "Título da Música",
+  "FU.ChanterExpansionPlaylistTitle": "Título da Playlist",
+  "FU.ChanterExpansionRitualsLabel": "Rituals",
+  "FU.ChanterExpansionVolumeLow": "Volume baixo",
+  "FU.ChanterExpansionVolumeMedium": "Volume médio",
+  "FU.ChanterExpansionVolumeHigh": "Volume alto",
+  "FU.ChanterExpansionVolumeLowHint": "Volume para músicas com volume baixo",
+  "FU.ChanterExpansionVolumeMediumHint": "Volume para músicas com volume médio",
+  "FU.ChanterExpansionVolumeHighHint": "Volume para músicas com volume alto",
+  "FU.ChanterExpansionEnable": "Ativar expansão musical do Chanter",
+  "FU.ChanterExpansionEnableHint": "Ativa ou desativa os recursos da expansão musical do Chanter"
 }
