--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,12 +1,20 @@
 {
-  "FU.ChanterCalmTone": "Calm Tone",
-  "FU.ChanterEnergeticTone": "Energetic Tone",
-  "FU.ChanterFranticTone": "Frantic Tone",
-  "FU.ChanterHauntingTune": "Haunting Tune",
-  "FU.ChanterLivelyTone": "Lively Tone",
-  "FU.ChanterMenacingTone": "Menacing Tone",
-  "FU.ChanterSolemnTone": "Solemn Tone",
-  "FU.ChanterSongTitleHeader": "Название песни",
-  "FU.ChanterPlaylistTitle": "Название плейлиста",
-  "FU.ChanterRitualsLabel": "Rituals"
+  "FU.ChanterExpansionCalmTone": "Calm Tone",
+  "FU.ChanterExpansionEnergeticTone": "Energetic Tone",
+  "FU.ChanterExpansionFranticTone": "Frantic Tone",
+  "FU.ChanterExpansionHauntingTune": "Haunting Tune",
+  "FU.ChanterExpansionLivelyTone": "Lively Tone",
+  "FU.ChanterExpansionMenacingTone": "Menacing Tone",
+  "FU.ChanterExpansionSolemnTone": "Solemn Tone",
+  "FU.ChanterExpansionSongTitleHeader": "Название песни",
+  "FU.ChanterExpansionPlaylistTitle": "Название плейлиста",
+  "FU.ChanterExpansionRitualsLabel": "Rituals",
+  "FU.ChanterExpansionVolumeLow": "Низкая громкость",
+  "FU.ChanterExpansionVolumeMedium": "Средняя громкость",
+  "FU.ChanterExpansionVolumeHigh": "Высокая громкость",
+  "FU.ChanterExpansionVolumeLowHint": "Громкость для песен с низкой громкостью",
+  "FU.ChanterExpansionVolumeMediumHint": "Громкость для песен со средней громкостью",
+  "FU.ChanterExpansionVolumeHighHint": "Громкость для песен с высокой громкостью",
+  "FU.ChanterExpansionEnable": "Включить музыкальное расширение Chanter",
+  "FU.ChanterExpansionEnableHint": "Включает или отключает функции музыкального расширения Chanter"
 }
